--- a/pom.xml
+++ b/pom.xml
@@ -62,4 +62,7 @@
 			</plugin>
 		</plugins>
 	</build>
+	<scm>
+		<url>scm:git:git://github.com/fastconnect/cloudify-openstack-driver.git</url>
+	</scm>
 </project>
