--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cloudifysiyrce</groupId>
 	<artifactId>cloudify-openstack-driver</artifactId>
-	<version>1.1</version>
+	<version>1.0-SNAPSHOT</version>
 
 	<scm>
 		<connection>scm:git:git@github.com:fastconnect/cloudify-openstack-driver.git</connection>
