change to http instead of https

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 	<distributionManagement>
 		<repository>
 			<id>repo.opensource.fastconnect.org</id>
-			<url>https://opensource.fastconnect.org/maven/content/repositories/opensource</url>
+			<url>http://opensource.fastconnect.org/maven/content/repositories/opensource</url>
 		</repository>
 	</distributionManagement>
 
