--- a/pom.xml
+++ b/pom.xml
@@ -30,12 +30,12 @@
 		<dependency>
 			<groupId>org.cloudifysource</groupId>
 			<artifactId>esc</artifactId>
-			<version>2.1.1</version>
+			<version>2.2.0-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cloudifysource</groupId>
 			<artifactId>dsl</artifactId>
-			<version>2.1.1</version>
+			<version>2.2.0-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
